// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Apply where condition Multiple where condition on one item, return only one item 1`] = `
Array [
  Object {
    "age": "8",
    "name": "John Doe",
    "url": "www.atlas.cz",
  },
]
`;

exports[`Apply where condition Two where condition on multiple items, should return two items. 1`] = `
Array [
  Object {
    "age": "8",
    "name": "John Doe",
    "url": "www.atlas.cz",
  },
  Object {
    "age": "8",
    "name": "Elania Beer",
    "url": "www.atlas.cz",
  },
]
`;

exports[`Apply where condition Without where condition should return all  items. 1`] = `
Array [
  Object {
    "age": "8",
    "name": "John Doe",
    "url": "www.atlas.cz",
  },
  Object {
    "age": "10",
    "name": "Zack MacFront",
    "url": "www.centrum.cz",
  },
  Object {
    "age": "8",
    "name": "Elania Beer",
    "url": "www.atlas.cz",
  },
]
`;

exports[`parseRowsFromMetaFilter It should parse sheet data 1`] = `
Array [
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:36 GMT",
    "name": "jobs2",
    "rowId": 1,
    "status": "DONE",
    "url": "http://exporter.lmc.cz/finance_titulka_xml.exp",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "jobs3",
    "rowId": 2,
    "status": "DONE",
    "url": "http://exporter.lmc.cz/management_titulka_xml.exp",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "lmc",
    "rowId": 3,
    "status": "DONE",
    "url": "http://exporter.lmc.cz/export_not_ostatni.xml",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "amplion-feed",
    "rowId": 4,
    "status": "DONE",
    "url": "https://ads.eoit.cz/ads/xml_centrum_zena-s_amplion.xml",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:42 GMT",
    "name": "sw-banner",
    "rowId": 5,
    "status": "DONE",
    "url": "http://www.sw.centrum.cz/export/mrss-carousel",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:38 GMT",
    "name": "stahuj-banner",
    "rowId": 6,
    "status": "DONE",
    "url": "http://www.stahuj.centrum.cz/primo/xml/carousel-tip-dne.php",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "lmc1",
    "rowId": 7,
    "status": "DONE",
    "url": "http://exporter.lmc.cz/finance_titulka_xml.exp",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "lmc2",
    "rowId": 8,
    "status": "DONE",
    "url": "http://exporter.lmc.cz/management_titulka_xml.exp",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "lmc3",
    "rowId": 9,
    "status": "DONE",
    "url": "http://exporter.lmc.cz/courses-aktualne-101.xml",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "lmc4",
    "rowId": 10,
    "status": "DONE",
    "url": "http://exporter.lmc.cz/courses-aktualne-202.xml",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "seduo",
    "rowId": 11,
    "status": "DONE",
    "url": "http://exporter.lmc.cz/seduo-aliance.xml",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "exchange",
    "rowId": 12,
    "status": "DONE",
    "url": "http://www.rke.cz/data.xml",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:38 GMT",
    "name": "nova-feed-v3",
    "rowId": 13,
    "status": "DONE",
    "url": "http://tn.nova.cz/rss?headlines=1",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "",
    "name": "fortuna_tv",
    "rowId": 14,
    "status": "",
    "url": "https://www.ifortuna.cz/cz/live_streams/feed/index.xml",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "fortuna_fotbal_ms",
    "rowId": 15,
    "status": "DONE",
    "url": "http://ext.ifortuna.cz/xmldata?datefilter=all&tournament=212&betfilter=main",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "fortuna_fotbal_qualme",
    "rowId": 16,
    "status": "DONE",
    "url": "http://ext.ifortuna.cz/xmldata?datefilter=all&tournament=1070&betfilter=main",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "fortuna_fotbal_ln",
    "rowId": 17,
    "status": "DONE",
    "url": "http://ext.ifortuna.cz/xmldata?datefilter=all&tournament=20766&betfilter=main",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "fortuna_fotbal_lm",
    "rowId": 18,
    "status": "DONE",
    "url": "http://ext.ifortuna.cz/xmldata?datefilter=all&tournament=172&betfilter=main",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "fortuna_fotbal_el",
    "rowId": 19,
    "status": "DONE",
    "url": "http://ext.ifortuna.cz/xmldata?datefilter=all&tournament=173&betfilter=main",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "fortuna_fotbal_cr",
    "rowId": 20,
    "status": "DONE",
    "url": "http://ext.ifortuna.cz/xmldata?datefilter=all&tournament=16&betfilter=main",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "fortuna_fotbal_an",
    "rowId": 21,
    "status": "DONE",
    "url": "http://ext.ifortuna.cz/xmldata?datefilter=all&tournament=17&betfilter=main",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "fortuna_fotbal_fr",
    "rowId": 22,
    "status": "DONE",
    "url": "http://ext.ifortuna.cz/xmldata?datefilter=all&tournament=19&betfilter=main",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "fortuna_fotbal_it",
    "rowId": 23,
    "status": "DONE",
    "url": "http://ext.ifortuna.cz/xmldata?datefilter=all&tournament=18&betfilter=main",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "fortuna_fotbal_ne",
    "rowId": 24,
    "status": "DONE",
    "url": "http://ext.ifortuna.cz/xmldata?datefilter=all&tournament=22&betfilter=main",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "fortuna_fotbal_sp",
    "rowId": 25,
    "status": "DONE",
    "url": "http://ext.ifortuna.cz/xmldata?datefilter=all&tournament=70&betfilter=main",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "fortuna_f1",
    "rowId": 26,
    "status": "DONE",
    "url": "http://ext.ifortuna.cz/xmldata?datefilter=all&category=44&betfilter=main",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "fortuna_hokej_ms",
    "rowId": 27,
    "status": "DONE",
    "url": "http://ext.ifortuna.cz/xmldata?datefilter=all&tournament=591&betfilter=main",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "fortuna_hokej_lm",
    "rowId": 28,
    "status": "DONE",
    "url": "http://ext.ifortuna.cz/xmldata?datefilter=all&tournament=4459&betfilter=main",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "fortuna_hokej_eht",
    "rowId": 29,
    "status": "DONE",
    "url": "http://ext.ifortuna.cz/xmldata?datefilter=all&tournament=1197&betfilter=main",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "fortuna_hokej_ehl",
    "rowId": 30,
    "status": "DONE",
    "url": "http://ext.ifortuna.cz/xmldata?datefilter=all&tournament=20&betfilter=main",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "fortuna_hokej_khl",
    "rowId": 31,
    "status": "DONE",
    "url": "http://ext.ifortuna.cz/xmldata?datefilter=all&tournament=90&betfilter=main",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "fortuna_hokej_nhl",
    "rowId": 32,
    "status": "DONE",
    "url": "http://ext.ifortuna.cz/xmldata?datefilter=all&tournament=93&betfilter=main",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "fortuna_hokej_zoh",
    "rowId": 33,
    "status": "DONE",
    "url": "http://ext.ifortuna.cz/xmldata?datefilter=all&tournament=6682&betfilter=main",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "fortuna_tenis",
    "rowId": 34,
    "status": "DONE",
    "url": "http://ext.ifortuna.cz/xmldata?datefilter=all&category=130&category=131&betfilter=main",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "fortuna_tenis_pragueopen",
    "rowId": 35,
    "status": "DONE",
    "url": "http://ext.ifortuna.cz/xmldata?datefilter=all&tournament=5711&tournament=5712&betfilter=main",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:38 GMT",
    "name": "tipsport_topmatches",
    "rowId": 36,
    "status": "DONE",
    "url": "https://www.tipsport.cz/ViewTopMatchesXMLAction.do",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "tipsport_mefotbal",
    "rowId": 37,
    "status": "DONE",
    "url": "http://ban.tipsport.cz/c/feed.php?feed=441&pid=2641&sid=3061&tid=3141&bid=3284",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:43 GMT",
    "name": "tipsport_fotbal",
    "rowId": 38,
    "status": "DONE",
    "url": "http://ban.tipsport.cz/c/feed.php?feed=681&pid=2641&sid=3061&bid=3284&tid=2161",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:38 GMT",
    "name": "tipsport_fotbal_cesko",
    "rowId": 39,
    "status": "DONE",
    "url": "http://ban.tipsport.cz/c/feed.php?feed=241&pid=2641&sid=3061&bid=3284&tid=2161",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "tipsport_fotbal_ms2018",
    "rowId": 40,
    "status": "DONE",
    "url": "http://ban.tipsport.cz/c/feed.php?feed=682&pid=2641&sid=3061&bid=3284&tid=2161",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:38 GMT",
    "name": "tipsport_fotbal_chleaque",
    "rowId": 41,
    "status": "DONE",
    "url": "http://ban.tipsport.cz/c/feed.php?feed=683&pid=2641&sid=3061&bid=3284&tid=2161",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:38 GMT",
    "name": "tipsport_fotbal_eleague",
    "rowId": 42,
    "status": "DONE",
    "url": "http://ban.tipsport.cz/c/feed.php?feed=684&pid=2641&sid=3061&bid=3284&tid=2161",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:38 GMT",
    "name": "tipsport_fotbal_anglie",
    "rowId": 43,
    "status": "DONE",
    "url": "http://ban.tipsport.cz/c/feed.php?feed=687&pid=2641&sid=3061&bid=3284&tid=2161",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:38 GMT",
    "name": "tipsport_fotbal_spanelsko",
    "rowId": 44,
    "status": "DONE",
    "url": "http://ban.tipsport.cz/c/feed.php?feed=841&pid=2641&sid=3061&bid=3284&tid=1721&kwid=323",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:38 GMT",
    "name": "tipsport_fotbal_nemecko",
    "rowId": 45,
    "status": "DONE",
    "url": "http://ban.tipsport.cz/c/feed.php?feed=842&pid=2641&sid=3061&bid=3284&tid=1721&kwid=49",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:38 GMT",
    "name": "tipsport_fotbal_italie",
    "rowId": 46,
    "status": "DONE",
    "url": "http://ban.tipsport.cz/c/feed.php?feed=843&pid=2641&sid=3061&bid=3284&tid=1721&kwid=51",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "tipsport_fotbal_repre",
    "rowId": 47,
    "status": "DONE",
    "url": "http://ban.tipsport.cz/c/feed.php?feed=682&pid=2641&sid=3061&tid=2161&bid=3284",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:39 GMT",
    "name": "tipsport_hokej",
    "rowId": 48,
    "status": "DONE",
    "url": "http://ban.tipsport.cz/c/feed.php?feed=685&pid=2641&sid=3061&bid=3284&tid=2161",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:38 GMT",
    "name": "tipsport_hokej_extraliga",
    "rowId": 49,
    "status": "DONE",
    "url": "http://ban.tipsport.cz/c/feed.php?feed=361&pid=2641&sid=3061&bid=3284&tid=2161",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:38 GMT",
    "name": "tipsport_hokej_nhl",
    "rowId": 50,
    "status": "DONE",
    "url": "http://ban.tipsport.cz/c/feed.php?feed=686&pid=2641&sid=3061&bid=3284&tid=2161",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "tipsport_hokej_ms",
    "rowId": 51,
    "status": "DONE",
    "url": "http://ban.tipsport.cz/c/feed.php?feed=901&pid=2641&sid=3061&bid=3284&tid=4023",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "tipsport_hokej_ms",
    "rowId": 52,
    "status": "DONE",
    "url": "http://ban.tipsport.cz/c/feed.php?feed=901&pid=2641&sid=3061&bid=3284&tid=4023",
  },
  Object {
    "errorMessage": "",
    "lastTriedAt": "Mon, 18 Feb 2019 11:34:37 GMT",
    "name": "tipsport_hokej_ms",
    "rowId": 53,
    "status": "DONE",
    "url": "http://ban.tipsport.cz/c/feed.php?feed=901&pid=2641&sid=3061&bid=3284&tid=4023",
  },
]
`;
